@@ -15,7 +15,8 @@ new argument 'alignOnly' to projectRaster
 new option 'setStatistics=FALSE' for writing to some GDAL files (geoTiff in particular) to suppress writing band statistics (min, max, mean, sd). This is currently not documented. When TRUE, all statistics are written when all the values are in memory, but only min and max are written in other cases, leading to problems in QGIS (reported by Agustin Lobo)
 Added argument "gridded=TRUE" for plot(RasterLayer, RasterLayer), to show counts for intervals (suggested by Agustin Lobo)
 Fixed bug in sampleRandom with "rowcol=TRUE" (reported by Agustin Lobo)
-
+Fixed bug with RAT tables in native format (reported by Joseph Steward)
+Added big.matrix as a "driver" (file format). This is experimental (and not documented).
 
 --- 1-September-2012, version 2.0-12
 fixed bug in summary reported by Agustin Lobo
